<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".screens.login.LoginActivity">


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_ring"
        android:indeterminateOnly="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        style="@style/RoundedButton"
        android:text="@string/login"
        android:onClick="onClickLogin"/>

    <Button
        android:layout_marginTop="5dp"
        android:textColor="@color/colorTint"
        style="@style/RoundedButton"
        android:text="@string/registration"
        android:onClick="onClickRegistration"/>

    <View
        android:layout_width="1dp"
        android:layout_height="200dp"/>
</LinearLayout>