<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_check_in">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alex.modulbank.screens.main.frags.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_account_actions"
            app:destination="@id/navigation_account_actions"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_payments"
        android:name="com.alex.modulbank.screens.main.frags.payments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.alex.modulbank.screens.main.frags.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_check_in"
        android:name="com.alex.modulbank.screens.main.frags.checking.CheckUserFragment"
        android:label="Привет"
        tools:layout="@layout/fragment_check_user" />
    <fragment
        android:id="@+id/navigation_account_actions"
        android:name="com.alex.modulbank.screens.main.frags.account.AccountActionsFragment"
        android:label="" />
</navigation>